--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,4 +27,4 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/${{github.repository_owner}}/dump1090:latest
+          tags: ghcr.io/${{github.repository_owner}}/dump1090:debian
